css fixes and html spacing

--- a/css/page1.css
+++ b/css/page1.css
@@ -250,6 +250,10 @@ max widths
     .jumbotron h1, .jumbotron .h1{
         font-size:32px !important;
     }
+
+    body{
+        font-size:14px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -288,10 +292,17 @@ max widths
         /*padding: 2px;*/
     }
     .jumbotron h1, .jumbotron .h1{
-        font-size:22px !important;
+        font-size:32px !important;
     }
     body{
-        font-size:14px;
+        font-size:13px;
     }
 
+    h2, .h2 {
+        font-size: 20px;
+
+    }
+    .btn{
+        font-size: 11px;
+    }
 }
